--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@
   padding-top: 40px;
   padding-bottom: 15px; }
 
-.serviciosFlex, .footer, h3, .nav li, .nav li a {
+.nav li, .nav li a, .serviciosFlex, .footer, h3 {
   text-decoration: none;
   list-style-type: none;
   font-family: 'Roboto Condensed', sans-serif;
@@ -11,9 +11,26 @@
 body {
   height: 100vh; }
 
+/* Header */
 .logo {
   margin-top: 35px; }
 
+/* Nav */
+.nav {
+  display: flex;
+  justify-content: space-evenly;
+  border-top: solid black 1px;
+  margin-top: 60px;
+  margin-left: 20px;
+  margin-right: 20px; }
+  .nav li {
+    margin-top: 15px;
+    margin-bottom: 50px; }
+    .nav li a:hover {
+      font-weight: bold;
+      color: black; }
+
+/* Main */
 .imgMain {
   width: 100%;
   margin-bottom: 45px; }
@@ -32,6 +49,7 @@ body {
     font-weight: bold;
     font-size: 20px; }
 
+/* Footer */
 .footer {
   background-color: black;
   display: grid;
@@ -64,16 +82,19 @@ h3 {
   text-align: left;
   font-size: 18px; }
 
-.nav {
-  display: flex;
-  justify-content: space-evenly;
-  border-top: solid black 1px;
-  margin-top: 60px;
-  margin-left: 20px;
-  margin-right: 20px; }
-  .nav li {
-    margin-top: 15px;
-    margin-bottom: 50px; }
-    .nav li a:hover {
-      font-weight: bold;
-      color: black; }
+/* Main Portoflio */
+.img1 {
+  width: 380px; }
+
+.img2 {
+  width: 380px; }
+
+.img3 {
+  width: 380px; }
+
+h2 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 100px; }
