--- a/css/estilo.css
+++ b/css/estilo.css
@@ -84,17 +84,12 @@ h3 {
 
 /* Main Portoflio */
 .img1 {
-  width: 380px; }
+  width: 50%;
+  margin-left: 20px; }
 
-.img2 {
-  width: 380px; }
-
-.img3 {
-  width: 380px; }
-
-h2 {
+.naturaleza {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
-  text-align: center;
   padding-top: 30px;
-  padding-bottom: 100px; }
+  padding-bottom: 100px;
+  margin-left: 50px; }
