--- a/css/estilo.css
+++ b/css/estilo.css
@@ -69,7 +69,7 @@ body {
       width: 40px;
       height: 40px; }
     .footer .footer1 .copyright {
-      margin-top: 48px; }
+      margin-top: px; }
   .footer .footer2 {
     border-top: solid 2px white;
     padding-top: 25px;
@@ -78,18 +78,42 @@ body {
 
 h3 {
   color: white;
-  padding: 8px;
+  padding: 6px;
   text-align: left;
   font-size: 18px; }
 
 /* Main Portoflio */
 .img1 {
   width: 50%;
-  margin-left: 20px; }
+  margin-left: 20px;
+  margin-top: 20px; }
 
-.naturaleza {
+main .naturaleza {
+  width: 50%;
+  margin: 20px;
+  margin-right: 100px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 50px; }
+
+main .animales {
+  width: 50%;
+  margin: 20px;
+  margin-right: 100px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 50px; }
+
+main .producciones {
+  width: 50%;
+  margin: 20px;
+  margin-right: 100px;
+  margin-bottom: 100px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 50px; }
+
+h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
-  padding-top: 30px;
-  padding-bottom: 100px;
-  margin-left: 50px; }
+  font-weight: bold; }
