--- a/css/estilo.css
+++ b/css/estilo.css
@@ -96,47 +96,17 @@ a:hover {
   padding-top: 15px; }
 
 .mainSobremi {
-  display: grid;
-  grid-template-columns: 3fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: "imgSobremi tituloSobremi tituloSobremi" "imgSobremi subtituloSobremi subtituloSobremi" "imgSobremi textoSobremi1 textoSobremi2";
-  margin-bottom: 100px; }
-  .mainSobremi .imgSobremi {
-    grid-area: imgSobremi;
-    margin-left: 80px; }
-    .mainSobremi .imgSobremi .imgSobremi2 {
-      width: 60%; }
+  margin-bottom: 50px; }
   .mainSobremi .tituloSobremi {
-    grid-area: tituloSobremi;
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-right: 50px;
-    margin-top: 200px;
-    text-align: start;
-    align-self: center;
-    border-top: solid black 2px;
-    padding-top: 15px; }
+    border-top: solid black 1px;
+    margin-top: 15px;
+    padding-top: 20px; }
   .mainSobremi .subtituloSobremi {
-    grid-area: subtituloSobremi;
-    font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
-    margin-right: 50px;
-    text-align: start;
-    align-self: center;
-    border-top: solid black 2px;
-    padding-top: 15px; }
+    margin-top: 15px; }
   .mainSobremi .textoSobremi1 {
-    grid-area: textoSobremi1;
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-right: 50px;
-    text-align: start;
-    align-self: center;
-    border-top: solid black 2px;
-    padding-top: 15px; }
+    border-top: solid black 1px;
+    padding-top: 20px; }
   .mainSobremi .textoSobremi2 {
-    grid-area: textoSobremi2;
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-right: 50px;
-    text-align: start;
-    align-self: center;
-    border-top: solid black 2px;
-    padding-top: 15px; }
+    border-top: solid black 1px;
+    padding-top: 20px; }
