--- a/css/estilo.css
+++ b/css/estilo.css
@@ -30,6 +30,7 @@ body {
 
 .imgMain {
   width: 100%;
+  margin-top: 40px;
   margin-bottom: 45px; }
 
 .divServicios {
@@ -64,8 +65,6 @@ body {
     .footer .footer1 .logoIng {
       width: 40px;
       height: 40px; }
-    .footer .footer1 .copyright {
-      margin-top: px; }
   .footer .footer2 {
     border-top: solid 2px white;
     padding-top: 25px;
