subiendo tercera entrega a github

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -109,3 +109,47 @@ a:hover {
   .mainSobremi .textoSobremi2 {
     border-top: solid black 1px;
     padding-top: 20px; }
+
+.mainForm {
+  display: flex;
+  margin: 70px auto; }
+  .mainForm h1 {
+    color: black;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 22px;
+    margin-bottom: 20px; }
+  .mainForm h2 {
+    color: black;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
+    margin-bottom: 20px; }
+  .mainForm .form {
+    margin: auto;
+    background-color: white;
+    max-width: 390px;
+    padding: 4.5em 3em;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px black;
+    text-align: center; }
+  .mainForm .formContainer {
+    margin-top: 3em;
+    display: grid;
+    gap: 8px; }
+    .mainForm .formContainer .formGroup {
+      position: relative; }
+      .mainForm .formContainer .formGroup .formInput {
+        width: 100%;
+        padding: 6px 3px;
+        border: none;
+        outline: none;
+        border-bottom: solid 1px black;
+        font-family: 'Roboto Condensed', sans-serif; }
+    .mainForm .formContainer .mensajeBottom {
+      margin-bottom: 75px; }
+    .mainForm .formContainer .formEnviar {
+      background-color: black;
+      color: white;
+      font-family: 'Roboto Condensed', sans-serif;
+      border-radius: 20px;
+      border: none;
+      padding: 5px 0; }
