--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -98,7 +98,9 @@ h3 {
     align-self: center;
     text-decoration: none;
     color: black;
-    border: solid black 2px;
+    border: none;
+    box-shadow: 0 5px 10px;
+    border-radius: 10px;
 }
 a:hover {
     color: black;
@@ -182,4 +184,99 @@ a:hover {
         }
     }
 }
-
+            // Main Servicios
+.mainServicios {
+    @include margin-t(200px);
+    .flexServicios {
+        display: flex;
+        justify-content: space-evenly;
+        .evento {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            a {
+                font-size: 26px;
+                padding-top: 12px;
+            }
+            .imgEvento {
+                width: 50px;
+            }
+            p {
+                font-size: 16px;
+                padding: 8px;
+                font-weight: lighter;
+            }   
+        }
+        .book {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            a {
+                font-size: 26px;
+                padding-top: 12px;
+            }
+            .imgBook {
+                width: 50px;
+            }
+            p {
+                font-size: 16px;
+                padding: 8px;
+                font-weight: lighter;             
+            }
+        }
+        .redesSociales {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            a {
+                font-size: 26px;
+                padding-top: 12px;
+            }
+            .imgSocial {
+                width: 50px;
+            }
+            p {
+                font-size: 16px;
+                padding: 8px;
+                font-weight: lighter;
+            }
+        }
+    }
+    .evento, .book, .redesSociales {
+        font-family:'Roboto Condensed', sans-serif;
+        font-size: 32px;
+        font-weight: bold;
+        text-align: center;
+        width: 250px;
+        padding: 8px;
+        border: none;
+        box-shadow: 0 5px 10px;
+        border-radius: 10px;
+    }
+    .imgServicios {
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 100px;
+    }
+}
+@media only screen and (max-width: 390px) {
+    .flexServicios {
+        flex-direction: column;
+        align-items: center;
+        .book, .redesSociales {
+            margin-top: 50px;            
+        }
+    }
+}
+@media only screen and (max-width: 768px) {
+    .flexServicios {
+        flex-direction: column;
+        align-items: center;
+        .book, .redesSociales {
+            margin-top: 50px;            
+        }
+    }
+}
